--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<template name="handlebars-obj-tests">
+<template name="ui_obj_tests">
   {{#with $obj}}
     {{test1 .}}
   {{/with}}
@@ -17,19 +17,19 @@
   {{#with $obj "one" 1 undefined "two" 2}}
     {{test6 .}}
   {{/with}}
-  {{#with $obj test7-obj}}
+  {{#with $obj test7_obj}}
     {{test7 .}}
   {{/with}}
-  {{#with $obj test8-obj}}
+  {{#with $obj test8_obj}}
     {{test8 .}}
   {{/with}}
-  {{#with $obj "one" 1 test9-obj "four" 4}}
+  {{#with $obj "one" 1 test9_obj "four" 4}}
     {{test9 .}}
   {{/with}}
-  {{#with $obj test10-obj1 "one" 8 test10-obj2}}
+  {{#with $obj test10_obj1 "one" 8 test10_obj2}}
     {{test10 .}}
   {{/with}}
 </template>
-<template name="handlebars-obj-test11">
+<template name="ui_obj_test11">
   {{$obj "one"}}
 </template>
